# sapitrello

./: .editorconfig  CMakeLists.txt  LICENSE  README.md  main.c
.github/workflows/: ci.yml
app/: app.c  app.h  database.c  database.h
commands/: add.c  add.h  assign.c  assign.h  create.c  create.h  delete.c  delete.h  describe.c  describe.h  exit.c  exit.h  save.c  save.h  select.c  select.h  show.c  show.h  update.c  update.h  use.c  use.h
docs/: STDB_FORMAT.md  STQL_FORMAT.md
models/: board.c  board.h  card.c  card.h  user.c  user.h
parser/: stql.c  stql.h
utils/: commandutils.c  commandutils.h  common.c  common.h  errors.c  errors.h  stringutils.c  stringutils.h
